<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">cesta+ (alpha)</string>

    <!-- TABS names -->
    <string name="title_section1">Prehľad</string>
    <string name="title_section2">Téma mesiaca</string>
    <string name="title_section3">Rubriky</string>
    <string name="title_section4">Baterka</string>

    <!-- MENU ACTIONS -->
    <string name="action_settings">Nastavenia</string>
    <string name="action_refresh">Aktualizovať</string>
    <string name="action_text_size">Veľkosť písma</string>
    <string name="action_test_notification">Issue test notification</string>
    <string name="action_o_portali">O portáli</string>
    <string name="action_database_manager">Start database manager</string>
    <string name="action_delete_db">Delete articles from ALL table</string>
    <string name="action_test_size_and_density">Check screen size and density</string>

    <!-- ACTIVITY TITLES -->
    <string name="title_activity_article">ArticleActivity</string>
    <string name="title_activity_section">SectionActivity</string>
    <string name="title_activity_oportali">O portáli</string>
    <string name="title_activity_not_logged">NotLoggedActivity</string>
    <string name="title_activity_logged">LoggedActivity</string>
    <string name="title_facebook_comments">Komentáre</string>


    <!-- VOLLEY & NETWORK ERROR MESSAGES -->
    <string name="no_connection_err_msg">Nie ste pripojený k sieti!</string>
    <string name="connection_error_msg">Chyba pripojenia na server!</string>
    <string name="authentification_error">Chyba autentifikácie!</string>
    <string name="server_error">Chyba servera</string>
    <string name="network_error">Chyba siete</string>
    <string name="parse_error">Chyba parsovania</string>

    <!-- LOGIN -->
    <string name="enter_credentials_msg">Zadajte potrebné prihlasovacie údaje!</string>
    <string name="login_connection_error">CHYBA pripojenia na server!\nSkontrolujte pripojenie na internet!</string>
    <string name="login_loading_dialog_msg">Logging in …</string>
    <string name="login_successful_msg">Prihlásenie úspešné!</string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Heslo</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">Prihlásiť</string>
    <string name="btn_login_big">PRIHLÁSIŤ</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_use_as_not_logged_in">Používať aplikáciu ako neprihlásený používateľ</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="prihlaseny_ako">Prihlasený/á ako</string>
    <string name="btn_logout">ODHLÁSIŤ</string>
    <string name="name">Fullname</string>
    <string name="account">Konto</string>
    <string name="tryAgain">Skúsiť znova</string>

    <string name="not_logged_user">Neprihlásený používateľ</string>

    <!-- ARTICLE ACTIVITY -->
    <string name="show_comments">Zobraziť komentáre</string>

    <!-- BATERKA TITLES -->
    <string name="meditationTitle">zamyslenie</string>
    <string name="depth_title">poď na hlbinu</string>
    <string name="tip_for_you_title">tip pre teba</string>

    <string name="notifications_allowed">Notifikácie povolené</string>
    <string name="notifications_forbidden">Notifikácie zakázané</string>
    <string name="no_new_articles">Žiadne nové články</string>
    <string name="num_of_new_articles">"Počet nových článkov: "</string>

    <!-- NAMES OF DAYS -->
    <string name="monday">Pondelok</string>
    <string name="tuesday">Utorok</string>
    <string name="wednesday">Streda</string>
    <string name="thursday">Štvrtok</string>
    <string name="friday">Piatok</string>
    <string name="saturday">Sobota</string>
    <string name="sunday">Nedeľa</string>

    <!-- NAMES OF MONTHS -->
    <string name="january">januára</string>
    <string name="february">februára</string>
    <string name="march">marca</string>
    <string name="april">apríla</string>
    <string name="may">mája</string>
    <string name="june">júna</string>
    <string name="july">júla</string>
    <string name="august">augusta</string>
    <string name="september">septembra</string>
    <string name="october">októbra</string>
    <string name="november">novembra</string>
    <string name="december">decembra</string>

    <!-- ALERT LOCKED START ************************************* -->
    <string name="alert_locked_title">prepáčte,</string>
    <string name="alert_locked_text">zvyšok článku je prístupný iba predplatiteľom.\nStaňte sa našim predplatiteľom a získajte aj iné výhody.</string>
    <string name="more_info_about_subscription">viac informácií o predplatnom      </string>
    <!-- ALERT LOCKED END *************************************** -->

    <!-- OTHER -->
    <string name="select_text_size_dialog_title">"Vyberte veľkosť písma: "</string>

    <string name="hello_blank_fragment">Tu sa zobrazí baterka na aktuálny deň</string>
    <string name="hello_world">Tu sa zobrazí vybraný článok</string>
    <string name="test_author">Tu bude autor</string>
    <string name="title_here">Martin Kramara o exhortácií Radosť lásky: Tí čo sa modlia, zostanú spolu</string>
    <string name="description_here">Synodu o rodine sledovalo množstvo pozorných a zvedacých očí od bežného sveta až po množstvo manželov aj tých, ktorá zažili bolesť z nevydareného vzťahu.</string>

    <!-- Navigational drawer START ***************************** -->
    <string name="home">Domov</string>
    <string name="account_nav_dr">Konto</string>
    <string name="baterka_on_today">Baterka na dnes</string>

    <!-- SECTIONS -->
    <!-- family -->
    <string name="family_group_item_title">Rodina</string>
    <string name="milovat_a_ctit_title">Milovať a ctiť</string>
    <string name="milovat_a_ctit_id">milovatactit</string>
    <string name="a_nikdy_ta_neopustim_title">A nikdy Ťa neopustím</string>
    <string name="a_nikdy_ta_neopustim_id">anikdytaneopustim</string>
    <string name="rodicovske_skratky_title">Rodičovské skratky</string>
    <string name="rodicovske_skratky_id">rodicovskeskratky</string>
    <string name="dvaja_v_jednom_title">Dvaja v jednom</string>
    <string name="dvaja_v_jednom_id">dvajavjednom</string>

    <!-- world -->
    <string name="world_group_item_title">Svet</string>

    <string name="krestan_v_politike_title">Kresťan v politike</string>
    <string name="krestan_v_politike_id">krestanvpolitike</string>
    <string name="z_parlamentu_title">Z parlamentu</string>
    <string name="z_parlamentu_id">zparlamentu</string>
    <string name="recenzia_title">Recenzia</string>
    <string name="recenzia_id">recenzia</string>
    <string name="na_pulze_title">Na pulze</string>
    <string name="na_pulze_id">napulze</string>
    <string name="aktualne_title">Aktuálne</string>
    <string name="aktualne_id">aktualne</string>

    <!-- faith -->
    <string name="faith_group_item_title">Viera</string>

    <string name="bozia_zona_title">Božia zóna</string>
    <string name="bozia_zona_id">boziazona</string>
    <string name="kuchynska_teologia_title">Kuchynská teológia</string>
    <string name="kuchynska_teologia_id">kuchynskateologia</string>
    <string name="prenasledovani_title">Prenasledovaní</string>
    <string name="prenasledovani_id">prenasledovani</string>

    <!-- plus -->
    <string name="plus_group_item_title">Plus</string>

    <string name="rozhovor_title">Rozhovor</string>
    <string name="rozhovor_id">rozhovor</string>
    <string name="xxl_clanky_title">XXL články</string>
    <string name="xxl_clanky_id">xxlclanky</string>
    <string name="psyche_title">Psyché</string>
    <string name="psyche_id">psyche</string>
    <string name="poviedky_title">Poviedky</string>
    <string name="poviedky_id">poviedky</string>

    <!-- other  -->
    <string name="other_group_item_title">Iné</string>

    <string name="slovoplus_title">Slovo+</string>
    <string name="slovoplus_id">slovoplus</string>
    <string name="preklady_title">Preklady</string>
    <string name="preklady_id">preklady</string>
    <string name="editorial_title">Editoriál</string>
    <string name="editorial_id">editorial</string>
    <string name="gauc_title">Gauč</string>
    <string name="gauc_id">gauc</string>

    <string name="o_portali_nav_dr">O portáli cesta+</string>
    <!-- Navigational drawer END ***************************** -->

</resources>
