<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="sk.cestaplus.cestaplusapp.test.ArticleActivity">

    <item
        android:id="@+id/action_text_size"
        android:title="@string/action_text_size"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/account"
        android:title="@string/account"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_o_portali"
        android:title="@string/action_o_portali"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_database_manager"
        android:title="@string/action_database_manager"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete_db"
        android:title="@string/action_delete_db"
        android:orderInCategory="100"
        app:showAsAction="never" />

</menu>
