<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/account"
        android:title="@string/account"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_list_style"
        android:title="@string/action_list_style"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_o_portali"
        android:title="@string/action_o_portali"
        android:orderInCategory="100"
        app:showAsAction="never" />


    <item
        android:id="@+id/action_test_notification"
        android:title="@string/action_test_notification"
        android:orderInCategory="100"
        app:showAsAction="never" />

</menu>
